feat : 캐러셀 layout, scss 추가

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,4 +1,5 @@
 @import "./nav.scss";
+@import "./main-top.scss";
 
 $site_max_width: 960px;
 $font_color: #333;
@@ -27,7 +28,6 @@ body {
 }
 
 header {
-  height: 500px;
   outline: red solid;
   display: block;
 }
