--- a/views/index.html
+++ b/views/index.html
@@ -52,24 +52,41 @@
         </ul>
       </nav>
     </header>
-    <!-- <section class="top">
-      <div class="top__wrap">
-        <div class="wrap__panel" id ="best">패션 베스트</div>
-        <div class="wrap__panel" id =>커피메이커</div>
-      </div>
-    </section>
-    <section class="main">
-      <div class="top__view">
-        <ul class="view__items">
-          <li>아이템1</li>
-          <li>아이템2</li>
-          <li>아이템3</li>
-          <li>아이템4</li>
-        </ul>
-      </div>
-    <div class="view-more">더 보기</div> 
-    </section>
-    <section class="carousel">
+
+    <main>
+      <section class="section-top">
+        <div class="section-top__container">
+          <div class="main__top__items" id="items-left">코트</div>
+          <div class="main__top__items" id="items-carousel">
+            <button>왼</button>
+            <div class="items-carousel__img">커피메이커</div>
+            <div class="items-carousel__slider">
+              <span>1</span>
+              <span>2</span>
+              <span>3</span>
+            </div>
+            <button>오</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-mid">
+        <div class="main__mid">
+          <ul class="main__mid__items">
+            <li>
+              <div class="main__mid__img">아이템1</div>
+            </li>
+            <li><div class="main__mid__img">아이템1</div></li>
+            <li><div class="main__mid__img">아이템1</div></li>
+            <li><div class="main__mid__img">아이템1</div></li>
+            <li><div class="main__mid__img">아이템1</div></li>
+          </ul>
+        </div>
+        <div class="main__view-more">더 보기</div>
+      </section>
+    </main>
+
+    <!-- <section class="carousel">
       <div class="carousel__title">지금뜨는 테마 카테고리</div>
       <ul class="carousel_items">
         <li>깔끔한 감성 가구 #두닷</li>
@@ -146,8 +163,8 @@
       최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.<br>
       각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기 바랍니다.
     </p></footer>
-    <small class="copyright">Copyright © daisycommerce Corp. All rights reserved.</small> -->
+    <small class="copyright">Copyright © daisycommerce Corp. All rights reserved.</small>
 
-    <script src="./main.js"></script>
+    <script src="./main.js"></script> -->
   </body>
 </html>
