--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+/*-------------------------------*/
+/*SET-UP*/
+/*-------------------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +17,10 @@ html {
 
 body {
   text-align: center;
-  justify-content: center; }
+  justify-content: center;
+  line-height: 1.5;
+  font-size: 12px;
+  color: #333; }
 
 li {
   text-decoration: none;
@@ -23,3 +29,132 @@ li {
 .invisible {
   visibility: hidden;
   /* opacity: 0 */ }
+
+/*-------------------------------*/
+/*HEADER*/
+/*-------------------------------*/
+header {
+  background-color: #fff;
+  text-align: center;
+  width: 100vw;
+  min-width: 977px;
+  height: 6.5rem;
+  position: relative;
+  padding-top: 43px; }
+  header .header__top {
+    display: inline-block;
+    vertical-align: top; }
+    header .header__top::after {
+      content: "";
+      clear: both;
+      display: table; }
+    header .header__top .sh-logo {
+      width: 119px;
+      height: auto;
+      vertical-align: top; }
+    header .header__top .searchbox {
+      position: relative;
+      float: right;
+      border: 1px solid #cecfd1;
+      width: 670px;
+      height: 54px;
+      padding: 16px 60px 14px 30px;
+      margin: 0 24px 0 30px;
+      border-radius: 10px;
+      background-color: #fff; }
+      header .header__top .searchbox button {
+        font-size: 12px;
+        line-height: 1.5;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 52px;
+        height: 52px;
+        background-color: transparent;
+        cursor: pointer;
+        vertical-align: middle;
+        border: 0; }
+        header .header__top .searchbox button .search-icon {
+          display: block;
+          overflow: hidden;
+          font-size: 0;
+          line-height: 0;
+          text-indent: -9999px;
+          background-image: url("/images/icon.png");
+          background-repeat: no-repeat;
+          position: absolute;
+          left: 14px;
+          top: 15px;
+          width: 23px;
+          height: 23px;
+          background-size: 130px 90px; }
+  header .nav-container {
+    margin-top: 40px;
+    border-top: 1px solid #efefef;
+    box-shadow: 0 1px #555; }
+    header .nav-container div {
+      width: 1276px;
+      margin: 0 auto;
+      position: relative;
+      padding: 19px 0; }
+      header .nav-container div ul {
+        display: inline-block; }
+      header .nav-container div .nav_first,
+      header .nav-container div .nav_middle {
+        float: left; }
+      header .nav-container div:first-child {
+        display: block;
+        height: 54px;
+        font-weight: 700;
+        font-size: 16px; }
+        header .nav-container div:first-child .nav_first__button {
+          cursor: pointer;
+          display: inline-block;
+          float: left; }
+          header .nav-container div:first-child .nav_first__button .category {
+            background-color: transparent;
+            border: 0;
+            border-radius: 0;
+            width: 118px; }
+          header .nav-container div:first-child .nav_first__button .menu-icon {
+            display: block;
+            overflow: hidden;
+            font-size: 0;
+            line-height: 0;
+            text-indent: -9999px;
+            background-image: url("/images/icon.png");
+            background-repeat: no-repeat;
+            left: 4px;
+            background-position: 0 -30px;
+            position: absolute;
+            top: 13px;
+            width: 28px;
+            height: 28px;
+            background-size: 130px 90px; }
+        header .nav-container div:first-child .tab_bold {
+          cursor: pointer;
+          padding: 0 19px;
+          float: left; }
+      header .nav-container div li {
+        display: inline-block;
+        position: relative;
+        letter-spacing: -0.04em;
+        color: #000;
+        text-align: left; }
+        header .nav-container div li .tab_light {
+          cursor: pointer;
+          float: left;
+          padding: 0 14px;
+          color: #888; }
+      header .nav-container div .txt_bar {
+        width: 1px;
+        height: 18px;
+        background-color: #e3e3e3;
+        display: inline-block;
+        float: left; }
+      header .nav-container div .nav_last {
+        display: inline-block;
+        height: 54px;
+        font-weight: 500;
+        font-size: 16px;
+        float: right; }
