--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,12 @@
         </header>
 
         <nav>
-            <button></button>
+            <div class="gnb__cate">
+                <button>
+                    <span></span>
+                    카테고리
+                </button>
+            </div>
             <ul class="gnb__main">
                 <li><a href="#">핫딜</a></li>
                 <li><a href="#">베스트100</a></li>
@@ -44,8 +49,14 @@
                 <li><a href="#">#온수매트</a></li>
             </ul>
             <ul class="gnb__user">
-                <li><a href="#">로그인</a></li>
-                <li><a href="#">최근본 상품</a></li>
+                <li><a href="#">
+                    <span></span>
+                    로그인
+                </a></li>
+                <li><a href="#">
+                    <span></span>
+                    최근본 상품
+                </a></li>
             </ul>
         </nav>
 
