Add : 메인 콘텐츠 공간 정리

--- a/shopping/public/stylesheets/main.css
+++ b/shopping/public/stylesheets/main.css
@@ -144,4 +144,11 @@ button, input {
   padding: 0 10px;
 }
 
+.main {
+  background-color: #f3f3f3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*# sourceMappingURL=main.css.map */
