--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -14,7 +14,6 @@ $nav_font_size : 16px;
 
 
 
-
 ul, li {
     list-style: none;
     display:inline;
@@ -186,7 +185,6 @@ button, input {
 
 
 
-
 .menu_link {
     padding: 0 13px;
 }
@@ -195,3 +193,11 @@ button, input {
     padding: 0 10px;
 }
 
+
+.main {
+    background-color: #f3f3f3;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
