--- a/shoppingHow/views/index.ejs
+++ b/shoppingHow/views/index.ejs
@@ -22,30 +22,46 @@
           </button>
         </div>
       </div>
+      <nav>
+        <div class="nav_container">
+          <div class="nav_left">
+            <div class="category">
+              <i class="fas fa-bars"></i>
+              <span>카테고리</span>
+            </div>
+            <span class="nav_line"></span>
+            <ul class="show">
+              <li>핫딜</li>
+              <li>베스트100</li>
+              <li>할인특가</li>
+              <li>기획전</li>
+            </ul>
+            <span class="nav_line"></span>
+            <ul class="keyword">
+              <li>#건강식품</li>
+              <li>#제철음식</li>
+              <li>#블루투스이어폰</li>
+              <li>#커블체어</li>
+              <li>#노트북</li>
+            </ul>
+          </div>
+          <div class="nav_right">
+            <ul class="user">
+              <li>
+                <i class="far fa-user-circle"></i>
+                <span>로그인</span>
+              </li>
+              <li>
+                <i class="far fa-stop-circle"></i>
+                <span>최근본 상품</span>
+                <i class="fas fa-caret-down"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <nav>
-      <div class="category">
-        <i class="fas fa-bars"></i>
-        <span>카테고리</span>
-      </div>
-      <ul class="show">
-        <li>핫딜</li>
-        <li>베스트100</li>
-        <li>할인특가</li>
-        <li>기획전</li>
-      </ul>
-      <ul class="keyword">
-        <li>#건강식품</li>
-        <li>#제철음식</li>
-        <li>#블루투스이어폰</li>
-        <li>#커블체어</li>
-        <li>#노트북</li>
-      </ul>
-      <ul class="user">
-        <li>로그인</li>
-        <li>최근본 상품</li>
-      </ul>
-    </nav>
+
     <main>
       <div class="main_wrapper">
         <section class="section_best">
