[Add] Insert responsed json data into carousel
- main.js
    - 캐러셀에 json data 넣기 진행
    - fetch하고 비동기로 받으니까, json data를 받아와 html 태그를 생성하여 innerHtml로 넣은 후 캐러셀을 조작해야 한다는 것은 알겠는데, 코드가 너무 길어짐
    - 현재 캐러셀 부분을 class로 객체화하거나 따로 분리해서 import할 수 있는 형식으로 만들어야 할 것 같은데 아무 아이디어도 떠오르지 않음.. ㅜㅜ

--- a/shopping/public/stylesheets/main/articleTop.scss
+++ b/shopping/public/stylesheets/main/articleTop.scss
@@ -23,9 +23,15 @@
 
     .event__slide {
       grid-column: 3/6;
+      position: relative;
 
       .slide_event {
-        background-color: tan;
+        // background-color: tan;
+        width: map-get($slide_img, width);
+        height: map-get($slide_img, height);
+        margin: auto;
+        overflow-x: hidden;
+        overflow-y: hidden;
       }
 
       .panel {
