--- a/src/scss/color.scss
+++ b/src/scss/color.scss
@@ -1,3 +1,5 @@
-$white: rgb(255, 255, 255);
-$gray: rgb(153, 153, 153);
-$lightgray: rgb(221, 221, 221);
+$white: #ffffff;
+$black: #000000;
+$darkgray: #414141;
+$gray: #999999;
+$lightgray: #dddddd;
