--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -8,3 +8,7 @@ $debug-color-4: #0b07f8;
 %debug-border-1 { box-shadow: 0 0 0 2px $debug-color-3 inset; }
 %debug-border-2 { box-shadow: 0 0 0 2px $debug-color-2 inset; }
 %debug-border-3 { box-shadow: 0 0 0 2px $debug-color-1 inset; }
+
+img {
+  @extend %debug-border-0;
+}
