--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,27 +1,15 @@
+@import "global.scss";
 @import "var.scss";
+@import "util.scss";
 @import "color.scss";
 @import "debug.scss";
-
-* {
-  box-sizing: border-box;
-}
-
-.clear-both {
-  clear: both;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
 
 header {
   @extend %debug-border-0;
   width: 100%;
-  // height: 190px;
   min-width: 980px;
   padding-top: 44px;
-  position: fixed;
+  // position: fixed;
   display: inline-block;
   text-align: center;
 }
@@ -73,20 +61,6 @@ header {
     float: left;
   }
 
-  %hori-list {
-    @extend %debug-border-2;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  
-    li {
-      @extend %debug-border-1;
-      position: relative;
-      display: inline-block;
-    }
-  }
-
   .head-navi__hori-list-left {
     @extend %hori-list;
     float: left;
@@ -95,5 +69,86 @@ header {
   .head-navi__hori-list-right {
     @extend %hori-list;
     float: right;
+  }
+}
+
+.wrap-body-sect {
+  @extend %debug-border-1;
+  width: 100%;
+  padding: 20px 0;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  background-color: $lightgray;
+
+  @for $i from 1 through $body-sect-cnt {
+    .body-sect-#{$i} {
+      @extend %debug-border-2;
+      // width: 100%;
+      padding: 0;
+      margin: 0 auto;
+      display: inline-block;
+      background-color: $white;
+    }
+  }
+
+  .body-sect-1 {
+    .wrap-main-evt {
+      display: inline-block;
+
+      > div {
+        @extend %debug-border-3;
+        float: left;
+        width: $main-evt-img-w;
+        height: $main-evt-img-h;
+        padding: 0;
+      }
+
+      .wrap-main-evt-slide {
+        position: relative;
+
+        .main-evt-slide {
+          
+        }
+
+        .main-evt-slide-ctrl {
+          position: absolute;
+          top: 80%;
+          left: 0;
+        }
+      }
+    }
+
+    .evt-card-slide {
+      .evt-card-hori-list {
+        @extend %debug-border-0;
+        @extend %hori-list;
+
+        .evt-card-hori-list__item {
+          padding: 21px;
+          position: relative;
+
+          .item__link {
+            .item__link__img {
+              width: $evt-card-item-img-w;
+              height: $evt-card-item-img-h;
+            }
+  
+            .item__link__title {
+              
+            }
+  
+            .item__link__desc {
+  
+            }
+  
+            .item__link__tag {
+              
+            }
+          }
+        }
+        
+      }
+    }
   }
 }
