--- a/scss/index.scss
+++ b/scss/index.scss
@@ -79,10 +79,20 @@ main {
       display: inline-block;
       width: 300%;
       position: relative;
+      left: -100%;
       &__item {
         position: relative;
         height: 100%;
         display: inline-block;
+      }
+      &.transition-on {
+        transition: transform 0.3s linear;
+        &.move-next {
+          transform: translateX(-33.3%);
+        }
+        &.move-prev {
+          transform: translateX(33.3%);
+        }
       }
     }
   }
