--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -24,7 +24,7 @@
             <span class="txt_bar"></span>
             <li><a class="tab_bold">핫딜</a></li>
             <li><a class="tab_bold">베스트100</a></li>
-            <li><a class="tab_bold">할인특가</a></li>
+            <li><a class="tab_bold special_sale">할인특가</a></li>
             <li><a class="tab_bold">기획전</a></li>
           </ul>
           <ul class="nav_middle">
@@ -36,8 +36,19 @@
             <li><a class="tab_light">#온수매트</a></li>
           </ul>
           <ul class="nav_last">
-            <li>로그인</li>
-            <li>최근본 상품</li>
+            <li class="nav_last__list">
+              <a class="login_container">
+                <span class="login-icon"></span>
+                로그인
+              </a>
+            </li>
+            <li class="nav_last__list">
+              <a class="recent_view">
+                <span class="recent-icon"></span>
+                최근본 상품
+                <span class="arrow-icon"></span>
+              </a>
+            </li>
           </ul>
         </div>
       </nav>
