--- a/shopping_how/public/stylesheets/style.css
+++ b/shopping_how/public/stylesheets/style.css
@@ -40,7 +40,8 @@ header {
   min-width: 977px;
   height: 6.5rem;
   position: relative;
-  padding-top: 43px; }
+  padding-top: 43px;
+  box-shadow: 0 1px #c7c6c6; }
   header .header__top {
     display: inline-block;
     vertical-align: top; }
@@ -74,29 +75,18 @@ header {
         cursor: pointer;
         vertical-align: middle;
         border: 0; }
-        header .header__top .searchbox button .search-icon {
-          display: block;
-          overflow: hidden;
-          font-size: 0;
-          line-height: 0;
-          text-indent: -9999px;
-          background-image: url("/images/icon.png");
-          background-repeat: no-repeat;
-          position: absolute;
-          left: 14px;
-          top: 15px;
-          width: 23px;
-          height: 23px;
-          background-size: 130px 90px; }
   header .nav-container {
     margin-top: 40px;
-    border-top: 1px solid #efefef;
-    box-shadow: 0 1px #555; }
+    border-top: 1px solid #efefef; }
     header .nav-container div {
       width: 1276px;
       margin: 0 auto;
       position: relative;
       padding: 19px 0; }
+      header .nav-container div::after {
+        content: "";
+        clear: both;
+        display: table; }
       header .nav-container div ul {
         display: inline-block; }
       header .nav-container div .nav_first,
@@ -115,26 +105,21 @@ header {
             background-color: transparent;
             border: 0;
             border-radius: 0;
-            width: 118px; }
-          header .nav-container div:first-child .nav_first__button .menu-icon {
-            display: block;
-            overflow: hidden;
-            font-size: 0;
-            line-height: 0;
-            text-indent: -9999px;
-            background-image: url("/images/icon.png");
-            background-repeat: no-repeat;
-            left: 4px;
-            background-position: 0 -30px;
-            position: absolute;
-            top: 13px;
-            width: 28px;
-            height: 28px;
-            background-size: 130px 90px; }
+            width: 100px;
+            position: relative; }
         header .nav-container div:first-child .tab_bold {
           cursor: pointer;
           padding: 0 19px;
           float: left; }
+        header .nav-container div:first-child .special_sale::after {
+          content: "";
+          position: absolute;
+          top: 0px;
+          width: 5px;
+          right: 10px;
+          height: 5px;
+          background-color: #f9624c;
+          border-radius: 10px; }
       header .nav-container div li {
         display: inline-block;
         position: relative;
@@ -151,10 +136,106 @@ header {
         height: 18px;
         background-color: #e3e3e3;
         display: inline-block;
-        float: left; }
+        float: left;
+        margin: 0 12px; }
       header .nav-container div .nav_last {
         display: inline-block;
-        height: 54px;
         font-weight: 500;
         font-size: 16px;
         float: right; }
+        header .nav-container div .nav_last .nav_last__list {
+          display: inline-block;
+          position: relative;
+          float: left;
+          padding-left: 30px; }
+
+.search-icon {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-image: url("/images/icon.png");
+  background-repeat: no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  left: 14px;
+  top: 15px;
+  width: 23px;
+  height: 23px; }
+
+.menu-icon {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-image: url("/images/icon.png");
+  background-repeat: no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  left: -15px;
+  background-position: 0 -30px;
+  top: -8px;
+  width: 28px;
+  height: 28px; }
+
+.login_container,
+.recent_view {
+  top: 13px;
+  width: 70px;
+  height: 28px;
+  margin-right: 30px;
+  cursor: pointer; }
+
+.login-icon {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-image: url("/images/icon.png");
+  background-repeat: no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  left: -4px;
+  background-position: -30px -30px;
+  top: -5px;
+  width: 28px;
+  height: 28px; }
+
+.recent-icon {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-image: url("/images/icon.png");
+  background-repeat: no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  left: -4px;
+  background-position: -60px -30px;
+  top: -5px;
+  width: 28px;
+  height: 28px; }
+
+.arrow-icon {
+  display: block;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px;
+  background-image: url("/images/icon.png");
+  background-repeat: no-repeat;
+  background-size: 130px 90px;
+  position: absolute;
+  right: 17px;
+  top: 8px;
+  width: 8px;
+  height: 5px;
+  background-position: -60px -60px; }
+
+.main,
+.hot-deal {
+  background-color: #f3f3f3; }
