--- a/beemo/views/main.html
+++ b/beemo/views/main.html
@@ -80,11 +80,24 @@
       <div class="main">
         <div class="main__first_line">
           <!-- 첫째줄 -->
-          <div class="main__first_line--left">
-            <img src="./images/ex1.jpg" alt="">
+          <div class="main__first_line__left">
+            <div class="main__first_line__left__box">
+              <img src="./images/ex1.jpg" alt="">
+            </div>
           </div>
-          <div class="main__first_line--right">
-            <img src="./images/ex2.jpg" alt="">
+          <div class="main__first_line__right">
+            <div class="main__first_line__right__box">
+              <img src="./images/ex2.jpg" alt="">
+            </div>
+            <div class="main__first_line__right__nav">
+              <span class="main__first_line__right__nav--dotted">aaa</span>
+              <button class="main__first_line__right__nav--left_button">
+                <span></span>
+              </button>
+              <button class="main__first_line__right__nav--right_button">
+                <span></span>
+              </button>
+            </div>
           </div>
         </div>
 
