--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,10 @@
     <header class>
         <div class="main__head">
             <div class="main__logo__box">
-                <span>쇼핑하우</span>
+                <img src="/images/main-logo.png" />
             </div>
 
-            <%= homeContents.contents[0].eventContent.title %>
+            <!-- <%= homeContents.contents[0].eventContent.title %> -->
 
             <div class="main__search__box">
                 <input type="search" class="inp_search btn_searchbox" placeholder="상품 검색" data-gg="{lk:mo_gnb_search,tp:A}">
