[style] Delete link type

--- a/views/index.html
+++ b/views/index.html
@@ -7,10 +7,8 @@
     <meta property="og:title" content="대한민국 최저가 가격비교 쇼핑! 쇼핑하우 by kakaocommerce">
     <meta property="og:url" content="//shoppinghow.kakao.com">
     <meta property="og:image" content="//shop.daumcdn.net/shophow/front/kakaocommerce_shopping.png">
-    <meta property="og:description" content="쇼핑하우 by kakaocommerce는 대한민국 온라인 쇼핑몰들의 상품 정보를 모두 모아 한번에 가격비교가 가능한, 최저가 가격비교 서비스 입니다.">
-    
-    
-    <link rel="stylesheet" type="text/css" href="stylesheets/test.css">
+    <meta property="og:description" content="쇼핑하우 by kakaocommerce는 대한민국 온라인 쇼핑몰들의 상품 정보를 모두 모아 한번에 가격비교가 가능한, 최저가 가격비교 서비스 입니다.">    
+    <link rel="stylesheet" href="stylesheets/index.css">
     <title>쇼핑하우 by kakaoCommerce</title>
 </head>
 <body>
