[Update] routes/index.js & public/main.js && slide.js
- routes/index.js
    - global 변수에 담지 않고 json-data를 바로 파싱해서 보내는 식으로 수정
- public
    - main.js : createCarousel()을 import해와서 사용
    - slide.js : createCarousel() 생성, 근데 리팩토링 해야 함

--- a/shopping/public/stylesheets/main/articleTop.scss
+++ b/shopping/public/stylesheets/main/articleTop.scss
@@ -10,7 +10,6 @@
     // border: 1px solid $navbar-line-color;
 
     .event {
-      // width: 100%;;
       border: 1px solid map-get($color-palette, top_border);
       border-bottom: none;
       text-align: center;
@@ -35,7 +34,7 @@
       }
 
       .panel {
-        display: table;
+        display: flex;
         float: left;
         width: map-get($slide_img, width);
         height: map-get($slide_img, height);
